--- a/css/moncv.css
+++ b/css/moncv.css
@@ -1,19 +1,32 @@
-* {
-	margin: 0;
-	padding: 0;
-	font-size: 14px;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto Mono', monospace;
+    color: rgb(54, 54, 54);
+    font-size: 14px;
 }
 
-.myname {
-	font-style: bold;
-	font-size: 18px;
-}
-.mycv {
-	font-size: 12px;
-	color: grey;
+/* resume body */
+.resume {
+    padding: 36px;
 }
 
-/* titles */
+.name {
+    font-style: bold;
+    font-size: 18px;
+}
+
+.cv {
+    font-size: 12px;
+    color: grey;
+}
+
+
+/* section header */
+.header div {
+    display: inline-block;
+}
 .icon {
-	
 }
