--- a/css/moncv.css
+++ b/css/moncv.css
@@ -17,11 +17,11 @@ html, body {
 .myinfo {
     margin: 20px 0;
 }
-.name {
+.myinfo .name {
     font-size: 28px;
     font-weight: bold;
 }
-.cv {
+.myinfo .cv {
     font-size: 12px;
     color: grey;
 }
@@ -32,20 +32,22 @@ html, body {
 
 /* vertical content and section titles */
 .header {
-    /*	display:inline-block;*/
+    font-size: 24px;
 }
-.icons {
-    padding: 20px 10px 5px 40px;
+.header i {
+    padding: 20px 0px 20px 20px;
+}
+.v-line1 span {
+    padding-left: 10px;
+}
+.fa {
+    padding: 10px 10px;
 }
 .vinfo {
 
 }
-.icon {
-    padding: 20px;
-}
 .title {
     line-height: 54px;
-    font-size: 24px;
     color: #266eb3;
 }
 .break-line {
@@ -114,11 +116,28 @@ html, body {
 .item:hover .dotted {
     transform: scale(1.5);
 }
+.xposition {
+    color: #266eb3;
+}
+.skills .fa {
+    padding: 0;
+}
+.skills .name {
+    width: 120px;
+    float: left;
+}
+.skills .level {
+    float: left;
+}
+.skill .level i.up {
+    color: #266eb3;
+}
 @media (max-width: 768px) {
     .photo {
         text-align: center;
+        padding: 20px 0;
     }
-    .body-content:before {
+    .item:before {
         display: none;
     }
     .body-content .dot {
@@ -126,5 +145,8 @@ html, body {
     }
     .xtime {
         margin-bottom: 10px;
+    }
+    .header i {
+        padding: 0px;
     }
 }
