--- a/css/moncv.css
+++ b/css/moncv.css
@@ -17,11 +17,11 @@ html, body {
 .myinfo {
     margin: 20px 0;
 }
-.myinfo .name {
+.summary .name {
     font-size: 28px;
     font-weight: bold;
 }
-.myinfo .cv {
+.summary .cv {
     font-size: 12px;
     color: grey;
 }
@@ -116,6 +116,10 @@ html, body {
 .item:hover .dotted {
     transform: scale(1.5);
 }
+.item .company {
+    font-weight: bold;
+    font-size: 16px;
+}
 .xposition {
     color: #266eb3;
 }
@@ -131,6 +135,10 @@ html, body {
 }
 .skill .level i.up {
     color: #266eb3;
+}
+.body-content .xinfo p {
+    text-align: justify;
+    word-break: break-all;
 }
 @media (max-width: 768px) {
     .photo {
@@ -148,5 +156,8 @@ html, body {
     }
     .header i {
         padding: 0px;
+    }
+    .start, .end {
+        display: inline-block;
     }
 }
