--- a/css/moncv.css
+++ b/css/moncv.css
@@ -128,6 +128,7 @@ html, body {
     transition: 0.2s all ease-in;
 }
 .item:hover .dotted {
+    background-color: #266eb3;
     transform: scale(1.5);
 }
 .item .company {
