--- a/css/moncv.css
+++ b/css/moncv.css
@@ -94,6 +94,10 @@ html, body {
     left: 50%;
     top: 7px;
 }
+.section {
+    float: left;
+    width: 100%;
+}
 /* work-expierence */
 .start, .end {
 }
@@ -110,6 +114,7 @@ html, body {
 }
 .item {
     position: relative;
+    width: 100%;
     float: left;
     padding-bottom: 20px;
 }
@@ -117,7 +122,7 @@ html, body {
     display: none;
 }
 .item:last-child {
-    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 .item .dotted {
     border-radius: 50%;
@@ -154,7 +159,6 @@ html, body {
 }
 .body-content .xinfo p {
     text-align: justify;
-    word-break: break-all;
 }
 @media (max-width: 768px) {
     .photo {
