--- a/css/moncv.css
+++ b/css/moncv.css
@@ -160,6 +160,18 @@ html, body {
 .body-content .xinfo p {
     text-align: justify;
 }
+.lang div {
+    float: right;
+    padding: 5px;
+    opacity: 0.5;
+    cursor: pointer;
+}
+.lang div.on {
+    opacity: 1;
+}
+.lang div img {
+    width: 36px;
+}
 @media (max-width: 768px) {
     .photo {
         text-align: center;
