--- a/css/moncv.css
+++ b/css/moncv.css
@@ -141,6 +141,9 @@ html, body {
     font-weight: bold;
     font-size: 16px;
 }
+.item .pro-links {
+    word-break: break-word;
+}
 .xposition {
     color: #266eb3;
 }
